# WatchAgent-Weather-Monitor-AI-Assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/agents/: event-detection-reviewer.md
.cursor/rules/: events-and-storage.mdc  poller-and-api.mdc
.cursor/skills/: SKILL.md  analyze_weather_data.py
.github/workflows/: ci.yml
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CityTabs.tsx  EventsList.tsx  ReadingCard.tsx  ReadingsGrid.tsx  StatsBar.tsx  TemperatureChart.tsx
frontend/src/utils/: weather.ts
src/watchagent/: __init__.py  cities.py  config.py  logging_config.py  main.py  time_utils.py
src/watchagent/api/: __init__.py  routes.py  schemas.py
src/watchagent/events/: __init__.py  detector.py  wmo.py
src/watchagent/poller/: __init__.py  client.py  loop.py
src/watchagent/storage/: __init__.py  database.py  models.py  repo.py
tests/: conftest.py  test_api.py  test_dedup.py  test_events.py
